...
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.basicMargin
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.getBackGroundColor
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.getBarTitleColor
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.getCurrentPrimaryColor
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.titleLarge

const val TestContent = "TestContent"

@SuppressLint("UnusedMaterial3ScaffoldPaddingParameter")
@Composable
fun MyBaseScreen(
    customTitle: @Composable () -> Unit = {},
    topBarText: String? = null,
...
