...
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.screens.destinations.TranslationListScreenDestination
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.basicMargin
import cz.mendelu.pef.xdostal8.saywhatsnap.ui.theme.roundedCorner

const val TestCordsTextField = "TestCordsTextField"
const val TestCordsButton = "TestCordsButton"
const val TestTranslateButton = "TestTranslateButton"
const val TestContinueButton = "TestContinueButton"
const val TestOrigStringTextField = "TestOrigStringTextField"
const val TestTransStringTextField = "TestTransStringTextField"
const val TestOrigLangAutocomplete = "TestOrigLangAutocomplete"
const val TestTransLangAutocomplete = "TestOTransLangAutocomplete"

@Destination
@Composable
fun TranslateScreen(
...
